--- a/Infra/kubernetes-cluster/ansible/ansible.cfg
+++ b/Infra/kubernetes-cluster/ansible/ansible.cfg
@@ -4,4 +4,4 @@ host_key_checking = False
 roles_path = roles
 
 [ssh_connection]
-ssh_args = -F ../vagrant-ssh
+ssh_args = -F ../../vagrant/vagrant-ssh
