--- a/Infra/monitoring/docker/grafana/provisioning/dashboards/dashboards.yml
+++ b/Infra/monitoring/docker/grafana/provisioning/dashboards/dashboards.yml
@@ -1,9 +1,9 @@
 apiVersion: 1
 providers:
-  - name: 'Node Exporter'
-    orgId: 1
-    folder: ''
+  - name: 'Node Exporter Dashboards'
+    folder: ''                        
     type: file
     disableDeletion: false
+    updateIntervalSeconds: 10
     options:
-      path: /var/lib/grafana/dashboards
+      path: /var/lib/grafana/dashboards 
