--- a/App/backend/pyproject.toml
+++ b/App/backend/pyproject.toml
@@ -6,7 +6,12 @@ requires-python = ">=3.11"
 readme = "README.md"
 
 dependencies = [
+    "cryptography>=46.0.3",
+    "fastapi>=0.128.0",
     "pydantic[email]>=2.6",
+    "pymysql>=1.1.2",
+    "sqlalchemy>=2.0.46",
+    "uvicorn>=0.40.0",
 ]
 
 [project.optional-dependencies]
