--- a/App/backend/docker-compose.yml
+++ b/App/backend/docker-compose.yml
@@ -2,16 +2,15 @@ services:
   db:
     image: mysql:8.0
     container_name: mysql_backend
+    command: --default-authentication-plugin=mysql_native_password
     restart: always
     environment:
-      MYSQL_DATABASE: my_app_db
-      MYSQL_ROOT_PASSWORD: root_password
-      MYSQL_USER: dev_user
-      MYSQL_PASSWORD: dev_password
-    ports:
-      - "3306:3306"
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+      - MYSQL_DATABASE=${MYSQL_DATABASE}
     volumes:
       - db_data:/var/lib/mysql
+    ports:
+      - "3306:3306"
 
   backend:
     build: .
@@ -22,8 +21,7 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - DATABASE_URL=mysql+pymysql://root:root_password@db:3306/my_app_db
-      - UV_PROJECT_ENVIRONMENT=/app/.venv 
+      - DATABASE_URL=${DATABASE_URL}
     depends_on:
       - db
 
