--- a/App/backend/pyproject.toml
+++ b/App/backend/pyproject.toml
@@ -6,6 +6,7 @@ requires-python = ">=3.11"
 readme = "README.md"
 
 dependencies = [
+    "alembic>=1.18.1",
     "cryptography>=46.0.3",
     "fastapi>=0.128.0",
     "pydantic[email]>=2.6",
