--- a/App/backend/pyproject.toml
+++ b/App/backend/pyproject.toml
@@ -9,6 +9,8 @@ dependencies = [
     "alembic>=1.18.1",
     "cryptography>=46.0.3",
     "fastapi>=0.128.0",
+    "geoalchemy2>=0.18.1",
+    "psycopg[binary]>=3.3.2",
     "pydantic[email]>=2.6",
     "pymysql>=1.1.2",
     "sqlalchemy>=2.0.46",
